# keystone-rba-plugin

./: .coveragerc  .gitignore  .stestr.conf  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/config-generator/: keystone_rba_plugin.conf
etc/sql/expand_repo/: 080_expand_add_rba_history_table.py
etc/sql/legacy_migrations/contract_repo/: 080_contract_add_rba_history_table.py
etc/sql/legacy_migrations/data_migration_repo/: 080_migrate_add_rba_history_table.py
keystone_rba_plugin/auth/plugins/: .core.py.~undo-tree~  __init__.py  core.py  rba.py
keystone_rba_plugin/conf/: .rba.py.~undo-tree~  __init__.py  rba.py
keystone_rba_plugin/rba/: .core.py.~undo-tree~  core.py
keystone_rba_plugin/rba/backends/: .sql.py.~undo-tree~  __init__.py  base.py  smtp.py  sql.py  sql_model.py
keystone_rba_plugin/tests/common/: .auth.py.~undo-tree~  auth.py  rba_dataset.csv
keystone_rba_plugin/tests/functional/: .test_functional.py.~undo-tree~  test_functional.py
keystone_rba_plugin/tests/functional/config_files/: backend_sql.conf
keystone_rba_plugin/tests/unit/: .test_backend_smtp.py.~undo-tree~  .test_backend_sql.py.~undo-tree~  .test_manager.py.~undo-tree~  .test_user_info.py.~undo-tree~  .test_v3_rba.py.~undo-tree~  test_backend_smtp.py  test_backend_sql.py  test_config.py  test_manager.py  test_user_info.py  test_v3_rba.py
keystone_rba_plugin/tests/unit/config_files/: test_rba.conf
