[metadata]
name = keystone-rba-plugin
summary = Risk-based authentication plugin for OpenStack Keystone.
description_file =
    README.md
description_content_type = text/markdown; charset=UTF-8
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8

[files]
packages =
	 keystone_rba_plugin

[extras]
ldap =
  python-ldap>=3.0.0 # PSF
  ldappool>=2.3.1 # MPL
memcache =
  python-memcached>=1.56 # PSF
mongodb =
  pymongo!=3.1,>=3.0.2 # Apache-2.0
bandit =
  bandit>=1.1.0 # Apache-2.0

[compile_catalog]
directory = keystone_rba_plugin/locale
domain = keystone_rba_plugin

[update_catalog]
domain = keystone_rba_plugin
output_dir = keystone_rba_plugin/locale
input_file = keystone_rba_plugin/locale/keystone_rba_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystone_rba_plugin/locale/keystone_rba_plugin.pot

[entry_points]
keystone.auth.rba =
    default = keystone_rba_plugin.auth.plugins.rba:RiskBasedAuthentication

keystone.rba =
    sql = keystone_rba_plugin.rba.backends.sql:AuthenticationHistory
    smtp = keystone_rba_plugin.rba.backends.smtp:PasscodeMessenger

oslo.config.opts =
    keystone_rba_plugin = keystone_rba_plugin.conf.rba:list_opts
